<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ic_tourist"
        style="@style/image"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/background3"
        >

    <!-- A CardView that contains a Button -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/RippleStyleWhite"
            >

        </com.balysv.materialripple.MaterialRippleLayout>

        <Button
            android:id="@+id/Attractions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attractions"
            style="@style/CardViewStyle"
            android:background="@drawable/background"
            />
    </android.support.v7.widget.CardView>

    <!-- A CardView that contains a Button -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/RippleStyleWhite">

    </com.balysv.materialripple.MaterialRippleLayout>

    <Button
        android:id="@+id/Event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/events"
        style="@style/CardViewStyle"
        android:background="@drawable/background"
        />
    </android.support.v7.widget.CardView>

    <!-- A CardView that contains a Button -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/RippleStyleWhite">

    </com.balysv.materialripple.MaterialRippleLayout>

    <Button
        android:id="@+id/historicPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historic"
        style="@style/CardViewStyle"
        android:background="@drawable/background"
        />
    </android.support.v7.widget.CardView>

    <!-- A CardView that contains a Button -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        >

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/RippleStyleWhite">

    </com.balysv.materialripple.MaterialRippleLayout>

    <Button
        android:id="@+id/Museums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/museums"
        style="@style/CardViewStyle"
        android:background="@drawable/background"
        />
    </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>